// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-implicit-init should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "known",
            "value": {
              "$$type": "Deploy",
              "queryId": 0n,
            },
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQBa30YuSvb265l9kPCXXQzgi8HILN4FjWh7sHmB3QY_RRai",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 7163n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "known",
              "value": {
                "$$type": "DeployOk",
                "queryId": 0n,
              },
            },
            "bounce": false,
            "from": "kQBa30YuSvb265l9kPCXXQzgi8HILN4FjWh7sHmB3QY_RRai",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": "0.991641",
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-implicit-init should increment counter 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "increment",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQBa30YuSvb265l9kPCXXQzgi8HILN4FjWh7sHmB3QY_RRai",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3754n,
      },
    ],
  },
  {
    "$seq": 2,
    "events": [
      {
        "$type": "storage-charged",
        "amount": "0.000000004",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "increment",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQBa30YuSvb265l9kPCXXQzgi8HILN4FjWh7sHmB3QY_RRai",
          "type": "internal",
          "value": "1",
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3754n,
      },
    ],
  },
]
`;
